# gekengine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.txt  CMakePresets.json  LICENSE  README.md
Applications/: CMakeLists.txt
Applications/compresstextures/: CMakeLists.txt  compresstextures.cpp  texturecompressor.cpp
Applications/createhull/: CMakeLists.txt  createhull.cpp
Applications/createlevel/: CMakeLists.txt  createlevel.cpp
Applications/creatematerials/: CMakeLists.txt  creatematerials.cpp
Applications/createmodel/: CMakeLists.txt  createmodel.cpp
Applications/createtree/: CMakeLists.txt  createtree.cpp
Applications/demo/: demo.cpp
Applications/demo_engine/: CMakeLists.txt  demo.cpp  demo_engine.cpp
Applications/demo_render/: CMakeLists.txt  demo_render.cpp
Applications/materialcreator/: materialcreator.cpp
Applications/modelconverter/: modelconverter.cpp
Applications/sphericalharmonicsgenerator/: CMakeLists.txt  sphericalharmonicsgenerator.cpp
Applications/texturecompressor/: texturecompressor.cpp
Libraries/: CMakeLists.txt
Libraries/GUI/: CMakeLists.txt  Dock.cpp  Gizmo.cpp  Utilities.cpp
Libraries/Math/: CMakeLists.txt  Matrix3x2.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Libraries/Resources/: CMakeLists.txt  resource.h  resource.rc
Libraries/Shapes/: AlignedBox.cpp  CMakeLists.txt  Frustum.cpp  OrientedBox.cpp  Plane.cpp  Ray.cpp  Sphere.cpp
Libraries/Utility/: CMakeLists.txt  Context.cpp  Evaluator.cpp  FileSystem.cpp  JSON.cpp  Profiler.cpp  ShuntingYard.cpp  String.cpp  ThreadPool.cpp  Timer.cpp
Plugins/: CMakeLists.txt
Plugins/API/: CMakeLists.txt
Plugins/Common/: CMakeLists.txt
Plugins/Components/: CMakeLists.txt  CameraProcessor.cpp  Color.cpp  ColorComponent.cpp  Light.cpp  LightsComponent.cpp  NameProcessor.cpp  SpinProcessor.cpp  Transform.cpp  TransformComponent.cpp  entrypoints.cpp
Plugins/Engine/: CMakeLists.txt  Core.cpp  Editor.cpp  Filter.cpp  Material.cpp  Passes.cpp  Passes.hpp  Population.cpp  Renderer.cpp  Resources.cpp  ResourcesHelpers.cpp  Shader.cpp  Visual.cpp  Visualizer.cpp  entrypoints.cpp
Plugins/Level/: LevelProcessor.cpp  entrypoints.cpp
Plugins/Model/: CMakeLists.txt  Cube.h  ModelProcessor.cpp  Sphere.h  entrypoints.cpp
Plugins/Particles/: CMakeLists.txt  SpritesProcessor.cpp  entrypoints.cpp
Plugins/Physics/: CMakeLists.txt  NewtonProcessor.cpp  Physical.cpp  PhysicalComponent.cpp  PhysicsProcessor.cpp  Player.cpp  PlayerBody.cpp  PlayerComponent.cpp  RigidBody.cpp  SceneComponent.cpp  StaticComponent.cpp  entrypoints.cpp
Plugins/Render/: BaseRender.cpp  CMakeLists.txt  D3D11Device.cpp  Device.cpp  Direct3DRender.cpp  Win32Window.cpp  entrypoints.cpp
Plugins/RenderDevice/: CMakeLists.txt
Plugins/Rendering/: CMakeLists.txt
Plugins/Shape/: ShapeProcessor.cpp  entrypoints.cpp
Plugins/System/: CMakeLists.txt  Direct3D11VideoDevice.cpp  Direct3D12VideoDevice.cpp  DirectInput8InputSystem.cpp  DirectSound8AudioDevice.cpp  OpenGLVideoDevice.cpp  VideoDevice.cpp  VulkanVideoDevice.cpp  Win32Window.cpp  Win32Window.cpp.cpp  entrypoints.cpp
applications/: CMakeLists.txt
applications/compressor/: compressor.vcxproj  main.cpp
applications/d3map/: d3map.vcxproj  main.cpp
applications/d3material/: d3material.vcxproj  main.cpp
applications/demo/: CMakeLists.txt  demo.cpp  demo.vcxproj  main.cpp  resource.h  resources.rc
applications/materialcreator/: CMakeLists.txt  materialcreator.cpp  materialcreator.vcxproj
applications/modelconverter/: CMakeLists.txt  main.cpp  modelconverter.cpp  modelconverter.vcxproj
applications/optimizer/: main.cpp  optimizer.vcxproj
applications/sceneconverter/: CMakeLists.txt  main.cpp  sceneconverter.cpp  sceneconverter.vcxproj
applications/sphericalharmonicsgenerator/: CMakeLists.txt  Resource.rc  main.cpp  resource.h  sphericalHarmonics.hlsl  sphericalharmonicsgenerator.cpp  sphericalharmonicsgenerator.vcxproj
applications/test/: main.cpp  resource.h  resources.rc  test.vcxproj
applications/texturecompressor/: CMakeLists.txt  main.cpp  texturecompressor.cpp  texturecompressor.vcxproj
applications/tiled/: main.cpp  tiled.vcxproj
libraries/: CMakeLists.txt
libraries/context/: BaseObservable.cpp  BaseUnkown.cpp  BaseUser.cpp  Context.cpp  ContextImplementation.cpp  ContextUser.cpp  ContextUserMixin.cpp  GEKContext.h  Observable.cpp  ObservableMixin.cpp  UnknownMixin.cpp  UserMixin.cpp  context.vcxproj  context.vcxproj.filters
libraries/math/: CMakeLists.txt  Color.cpp  Convert.cpp  Float2.cpp  Float3.cpp  Float3x2.cpp  Float4.cpp  Float4x4.cpp  GEKMath.h  Matrix3x2.cpp  Matrix4x4.cpp  Matrix4x4SIMD.cpp  Quaternion.cpp  RGBA.cpp  SIMD4.cpp  SIMD4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  Vector4SIMD.cpp  math.vcxproj  math.vcxproj.filters
libraries/mesh/: GEKMesh.cpp  GEKMesh.h  mesh.vcxproj  mesh.vcxproj.filters
libraries/shape/: AlignedBox.cpp  Frustum.cpp  GEKShape.h  OrientedBox.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  shape.vcxproj  shape.vcxproj.filters
libraries/shapes/: AlignedBox.cpp  CMakeLists.txt  Frustum.cpp  OrientedBox.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  shapes.vcxproj  shapes.vcxproj.filters
libraries/utility/: CMakeLists.txt  Context.cpp  Display.cpp  Evaluator.cpp  FileSystem.cpp  GEKUtility.cpp  GEKUtility.h  JSON.cpp  ShuntingYard.cpp  ShuntingYard.h  String.cpp  ThreadPool.cpp  Timer.cpp  Trace.cpp  XML.cpp  exprtk.hpp  shunting-yard.c  shunting-yard.h  utility.vcxproj  utility.vcxproj.filters
plugins/: CMakeLists.txt
plugins/components/: CMakeLists.txt  Camera.cpp  CameraProcessor.cpp  Color.cpp  Filter.cpp  Follow.cpp  FollowProcessor.cpp  GEKComponents.h  GEKComponentsCLSIDs.h  Light.cpp  Scale.cpp  Size.cpp  Spin.cpp  SpinProcessor.cpp  Transform.cpp  components.vcxproj  components.vcxproj.filters  entrypoints.cpp
plugins/engine/: CMakeLists.txt  ClipRegion.hpp  Core.cpp  Editor.cpp  Engine.cpp  Filter.cpp  GEKEngine.h  GEKEngineCLSIDs.h  LightGrid.cpp  LightGrid.hpp  Material.cpp  Pass.cpp  Passes.cpp  Passes.hpp  Plugin.cpp  (+15 more)
(+730 files in other folders)
