project (Applications)

add_subdirectory("demo")
add_subdirectory("creatematerials")
add_subdirectory("createlevel")
add_subdirectory("createtree")
add_subdirectory("createmodel")
add_subdirectory("createhull")
add_subdirectory("compresstextures")

set_property(TARGET demo PROPERTY FOLDER "Applications")
set_property(TARGET creatematerials PROPERTY FOLDER "Applications")
set_property(TARGET createlevel PROPERTY FOLDER "Applications")
set_property(TARGET createtree PROPERTY FOLDER "Applications")
set_property(TARGET createmodel PROPERTY FOLDER "Applications")
set_property(TARGET createhull PROPERTY FOLDER "Applications")
set_property(TARGET compresstextures PROPERTY FOLDER "Applications")