project (Applications)

#add_subdirectory("demo_render")
add_subdirectory("demo_engine")
#add_subdirectory("creatematerials")
add_subdirectory("createtree")
add_subdirectory("createmodel")
add_subdirectory("createhull")
add_subdirectory("compresstextures")

if(GEK_CREATE_FOLDERS)
    #set_property(TARGET demo_render PROPERTY FOLDER "Applications")
    set_property(TARGET demo_engine PROPERTY FOLDER "Applications")
    #set_property(TARGET creatematerials PROPERTY FOLDER "Applications")
    set_property(TARGET createtree PROPERTY FOLDER "Applications")
    set_property(TARGET createmodel PROPERTY FOLDER "Applications")
    set_property(TARGET createhull PROPERTY FOLDER "Applications")
    set_property(TARGET compresstextures PROPERTY FOLDER "Applications")
endif()