project (Applications)

#add_subdirectory("demo_render")
add_subdirectory("demo_engine")
add_subdirectory("createtree")
add_subdirectory("createmodel")
add_subdirectory("createhull")
if(MSVC)
    add_subdirectory("compresstextures")
endif()

if(GEK_CREATE_FOLDERS)
    #set_property(TARGET demo_render PROPERTY FOLDER "Applications")
    set_property(TARGET demo_engine PROPERTY FOLDER "Applications")
    set_property(TARGET createtree PROPERTY FOLDER "Applications")
    set_property(TARGET createmodel PROPERTY FOLDER "Applications")
    set_property(TARGET createhull PROPERTY FOLDER "Applications")
    if(MSVC)
        set_property(TARGET compresstextures PROPERTY FOLDER "Applications")
    endif()
endif()