project (Plugins)

add_subdirectory("API")
add_subdirectory("Components")
add_subdirectory("Engine")
add_subdirectory("Model")
add_subdirectory("Physics")
add_subdirectory("System")
add_subdirectory("Render")

if(GEK_CREATE_FOLDERS)
    set_property(TARGET Components PROPERTY FOLDER "Plugins")
    set_property(TARGET Engine PROPERTY FOLDER "Plugins")
    set_property(TARGET Model PROPERTY FOLDER "Plugins")
    set_property(TARGET Physics PROPERTY FOLDER "Plugins")
    set_property(TARGET System PROPERTY FOLDER "Plugins")
    set_property(TARGET Render PROPERTY FOLDER "Plugins")
endif()