project (Plugins)

add_subdirectory("components")
add_subdirectory("engine")
add_subdirectory("model")
add_subdirectory("physics")
add_subdirectory("shape")
add_subdirectory("system")

set_property(TARGET components PROPERTY FOLDER "Plugins")
set_property(TARGET engine PROPERTY FOLDER "Plugins")
set_property(TARGET model PROPERTY FOLDER "Plugins")
set_property(TARGET physics PROPERTY FOLDER "Plugins")
set_property(TARGET shape PROPERTY FOLDER "Plugins")
set_property(TARGET system PROPERTY FOLDER "Plugins")